// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`activityLogTableHeadersConf > activityLogsTableHeadersConf for settings 1`] = `
[
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isBold": true,
    "isFixed": true,
    "secondaryFormatFn": [Function],
    "secondaryTextClass": "text-body-small",
    "secondaryTextKey": "timestamp",
    "showTooltip": true,
    "sortable": false,
    "text": "User action time",
    "textKey": "timestamp",
    "value": "timestamp",
  },
  {
    "formatFn": [Function],
    "sortable": false,
    "text": "Objects",
    "textKey": "entity",
  },
  {
    "formatFn": [Function],
    "secondaryFormatFn": [Function],
    "secondaryTextClass": [Function],
    "secondaryTextKey": "entity",
    "sortable": false,
    "text": "Object ID",
    "textKey": "entity",
  },
  {
    "formatFn": [Function],
    "sortable": false,
    "text": "User actions",
    "textKey": "userAction",
  },
  {
    "formatFn": [Function],
    "slot": [Function],
    "sortable": false,
    "style": {
      "minWidth": "311px",
    },
    "text": "Old values",
    "textKey": "oldValues",
  },
  {
    "formatFn": [Function],
    "slot": [Function],
    "sortable": false,
    "style": {
      "minWidth": "311px",
    },
    "text": "New values",
    "textKey": "newValues",
  },
  {
    "formatFn": [Function],
    "secondaryFormatFn": [Function],
    "secondaryTextClass": "text-body-small",
    "secondaryTextKey": "user",
    "sortable": false,
    "text": "Users",
    "textKey": "user",
  },
  {
    "formatFn": [Function],
    "sortable": false,
    "text": "Roles",
    "textKey": "user",
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIconClass": "cursor-pointer",
    "filterable": false,
    "isContentExpandColumn": true,
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIconClass": "cursor-pointer",
    "filterable": false,
    "hasOpenLinkBtn": [Function],
    "id": "openEntityLink",
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
]
`;

exports[`activityLogTableHeadersConf > activityLogsTableHeadersConf for shift view 1`] = `
[
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isBold": true,
    "isFixed": true,
    "secondaryFormatFn": [Function],
    "secondaryTextClass": "text-body-small",
    "secondaryTextKey": "timestamp",
    "showTooltip": true,
    "sortable": false,
    "text": "User action time",
    "textKey": "timestamp",
    "value": "timestamp",
  },
  {
    "formatFn": [Function],
    "secondaryFormatFn": [Function],
    "secondaryTextClass": "text-body-small",
    "secondaryTextKey": "eventTime",
    "sortable": false,
    "text": "Event time",
    "textKey": "eventTime",
  },
  {
    "formatFn": [Function],
    "sortable": false,
    "text": "Events",
    "textKey": "event",
  },
  {
    "formatFn": [Function],
    "sortable": false,
    "text": "User actions",
    "textKey": "userAction",
  },
  {
    "formatFn": [Function],
    "slot": [Function],
    "sortable": false,
    "style": {
      "minWidth": "311px",
    },
    "text": "Old values",
    "textKey": "oldValues",
  },
  {
    "formatFn": [Function],
    "slot": [Function],
    "sortable": false,
    "style": {
      "minWidth": "311px",
    },
    "text": "New values",
    "textKey": "newValues",
  },
  {
    "formatFn": [Function],
    "secondaryFormatFn": [Function],
    "secondaryTextClass": "text-body-small",
    "secondaryTextKey": "user",
    "sortable": false,
    "text": "Users",
    "textKey": "user",
  },
  {
    "formatFn": [Function],
    "sortable": false,
    "text": "Roles",
    "textKey": "user",
  },
  {
    "formatFn": [Function],
    "secondaryFormatFn": [Function],
    "secondaryTextClass": "text-body-small",
    "secondaryTextKey": "factory",
    "sortable": false,
    "text": "Factory",
    "textKey": "factory",
  },
  {
    "formatFn": [Function],
    "secondaryFormatFn": [Function],
    "secondaryTextClass": "text-body-small",
    "secondaryTextKey": "station",
    "sortable": false,
    "text": "station",
    "textKey": "station",
  },
  {
    "formatFn": [Function],
    "secondaryFormatFn": [Function],
    "secondaryTextClass": "text-body-small",
    "secondaryTextKey": "shift",
    "sortable": false,
    "text": "Shifts",
    "textKey": "shift",
  },
  {
    "formatFn": [Function],
    "sortable": false,
    "text": "Operators",
    "textKey": "operators",
  },
  {
    "formatFn": [Function],
    "secondaryFormatFn": [Function],
    "secondaryTextClass": "text-body-small white-space-pre",
    "secondaryTextKey": "product",
    "sortable": false,
    "text": "products",
    "textKey": "product",
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIconClass": "cursor-pointer",
    "filterable": false,
    "isContentExpandColumn": true,
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIconClass": "cursor-pointer",
    "filterable": false,
    "hasOpenLinkBtn": true,
    "id": "openShiftLink",
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
]
`;
